# subface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.Linux.yml  build.Windows.yml  build.macOS.yml  build.yml
src/core/: LoopSubface.cpp  LoopSubface.hpp  Subface.cpp  Subface.hpp
src/shader/: fragment.glsl  vertex.glsl
src/subface/: subface.cpp
src/utility/: Camera.cpp  Camera.hpp  FPS.cpp  FPS.hpp  Model.cpp  Model.hpp  OGL.cpp  OGL.hpp  Timer.cpp  Timer.hpp  Toggle.cpp  Toggle.hpp
